corrected a scrollbar and margin

--- a/src/features/controls/controls.scss
+++ b/src/features/controls/controls.scss
@@ -125,7 +125,7 @@
 @media (max-width: 1439px) {
     .controls {
         width: 100%;
-        margin: 0px auto 80px;
+        margin: 0px auto 40px;
         .controls-wrapper {
             width: 85%;
             margin: 0 auto 40px;
