--- a/src/features/popularCategories/popularCategories.scss
+++ b/src/features/popularCategories/popularCategories.scss
@@ -89,8 +89,11 @@
             .categories-list {
                 display: flex;
                 overflow-x: scroll;
+                &::-webkit-scrollbar {
+                    width: 0px;
+                }
                 width: 100%;
-                height: 84px;
+                height: 105px;
                 gap: 8px;
                 & div {
                     padding: 8px 12px;
@@ -161,8 +164,11 @@
             .categories-list {
                 display: flex;
                 overflow-x: scroll;
+                &::-webkit-scrollbar {
+                    width: 0px;
+                }
                 width: 100%;
-                height: 84px;
+                height: 105px;
                 gap: 8px;
                 & div {
                     padding: 8px 12px;
