--- a/src/widgets/header/header.scss
+++ b/src/widgets/header/header.scss
@@ -79,7 +79,7 @@ header {
 @media (max-width: 1439px) {
     header {
         width: 100%;
-        margin: 0px auto 80px;
+        margin: 0px auto 40px;
         .header-wrapper {
             width: 85%;
             margin: 0 auto 40px;
